syntax = "proto3";

option csharp_namespace = "GrpcServer";

package authentication;

// The greeting service definition.
service Authentication {
  rpc Authenticate (AuthenticationRequest) returns (AuthenticationResponse);
}

message AuthenticationRequest {
  string Email = 1;
  string Password = 2;
}

message AuthenticationResponse {
  string AccessToken = 1;
  int32 ExpiresIn = 2;
  string ErrorMessage=3;
  bool IsSuccessful = 4;
}
